# comp530

./: CMakeLists.txt
Main/BufferMgr/: CMakeLists.txt
